<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/questTextBox"
        android:layout_width="323dp"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="70dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:text="@string/questTextBox"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="43dp"
        android:text="@string/yesButton"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/directionLabel"
        app:layout_constraintEnd_toStartOf="@+id/noButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questTextBox" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/noButton"
        android:onClick="onClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yesButton" />

    <Spinner
        android:id="@+id/directionSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="17dp"
        android:entries="@array/directionOptions"
        android:paddingLeft="17dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/moveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionLabel" />

    <TextView
        android:id="@+id/directionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="22dp"
        android:text="@string/directionLabel"
        app:layout_constraintBottom_toTopOf="@+id/directionSpinner"
        app:layout_constraintEnd_toEndOf="@+id/noButton"
        app:layout_constraintTop_toBottomOf="@+id/yesButton" />

    <Button
        android:id="@+id/moveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="85dp"
        android:text="@string/moveButton"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directionLabel"
        app:layout_constraintTop_toBottomOf="@+id/directionSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>